<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    android:background="#00BF9A"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="24sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/heading"
            android:text="@string/keeper"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_line"
            android:layout_marginTop="0sp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_below="@id/heading"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="#008975"
        android:onClick="login"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:id="@+id/login_btn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:background="#008975"
        android:onClick="register"
        android:id="@+id/register_btn"/>

</LinearLayout>
