<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sayVisibleOrNot"
        android:padding="16dp">

        <TextView
            android:id="@+id/custom_listview_user"
            style="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/username" />
        <TextView
            android:id="@+id/custom_listview_type"
            style="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"

            android:layout_weight="1"
            android:text="@string/type" />

        <TextView
            android:id="@+id/custom_listview_password"
            style="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/bold_password"
            android:textAlignment="center" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"/>

    <ListView
        android:id="@+id/select_dialog_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>